Fix aligned Item list

--- a/src/app/tab-sliding/tab-sliding.page.scss
+++ b/src/app/tab-sliding/tab-sliding.page.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     ion-checkbox {
-        margin-right: -75%;
+        margin-right: -80%;
     }
 
     ion-label {
