--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     ion-checkbox {
-        margin-right: -70%;
+        margin-right: -75%;
     }
 
     ion-label {
